// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotFoundErrors component renders correctly for index-pattern type 1`] = `
<div
  class="euiPanel euiPanel--danger euiCallOut euiCallOut--danger emotion-euiPanel-none-danger-euiCallOut-danger"
  data-size="m"
  style="--euiCallOutTypeColor: #C61E25;"
>
  <div
    class="css-1slkmya-wrapper"
  >
    <div
      class="css-wlziyu-body"
    >
      <span
        aria-hidden="true"
        class="css-1cmanx3-icon-l-icon"
        color="#C61E25"
        data-euiicon-type="warning"
      />
      <div
        class="css-ak2bmi-content"
      >
        <p
          class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader"
        >
          There is a problem with this saved object
        </p>
        <div
          class="euiText euiCallOut__additionalContent emotion-euiText-s-euiTextColor-default"
        >
          <div>
            The data view associated with this object no longer exists.
          </div>
          <div>
            If you know what this error means, you can use the 
            <a
              aria-label="Saved objects APIs"
              class="euiLink emotion-euiLink-primary"
              href="https://www.elastic.co/docs/api/doc/kibana/group/endpoint-saved-objects"
              rel="noopener noreferrer"
              target="_blank"
            >
              Saved objects APIs
              <span
                class="css-1j75qc1"
                data-euiicon-type="external"
                role="presentation"
              />
              <span
                class="emotion-euiScreenReaderOnly"
              >
                (external, opens in a new tab or window)
              </span>
            </a>
             to fix it — otherwise click the delete button above.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotFoundErrors component renders correctly for index-pattern-field type 1`] = `
<div
  class="euiPanel euiPanel--danger euiCallOut euiCallOut--danger emotion-euiPanel-none-danger-euiCallOut-danger"
  data-size="m"
  style="--euiCallOutTypeColor: #C61E25;"
>
  <div
    class="css-1slkmya-wrapper"
  >
    <div
      class="css-wlziyu-body"
    >
      <span
        aria-hidden="true"
        class="css-1cmanx3-icon-l-icon"
        color="#C61E25"
        data-euiicon-type="warning"
      />
      <div
        class="css-ak2bmi-content"
      >
        <p
          class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader"
        >
          There is a problem with this saved object
        </p>
        <div
          class="euiText euiCallOut__additionalContent emotion-euiText-s-euiTextColor-default"
        >
          <div>
            A field associated with this object no longer exists in the data view.
          </div>
          <div>
            If you know what this error means, you can use the 
            <a
              aria-label="Saved objects APIs"
              class="euiLink emotion-euiLink-primary"
              href="https://www.elastic.co/docs/api/doc/kibana/group/endpoint-saved-objects"
              rel="noopener noreferrer"
              target="_blank"
            >
              Saved objects APIs
              <span
                class="css-1j75qc1"
                data-euiicon-type="external"
                role="presentation"
              />
              <span
                class="emotion-euiScreenReaderOnly"
              >
                (external, opens in a new tab or window)
              </span>
            </a>
             to fix it — otherwise click the delete button above.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotFoundErrors component renders correctly for search type 1`] = `
<div
  class="euiPanel euiPanel--danger euiCallOut euiCallOut--danger emotion-euiPanel-none-danger-euiCallOut-danger"
  data-size="m"
  style="--euiCallOutTypeColor: #C61E25;"
>
  <div
    class="css-1slkmya-wrapper"
  >
    <div
      class="css-wlziyu-body"
    >
      <span
        aria-hidden="true"
        class="css-1cmanx3-icon-l-icon"
        color="#C61E25"
        data-euiicon-type="warning"
      />
      <div
        class="css-ak2bmi-content"
      >
        <p
          class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader"
        >
          There is a problem with this saved object
        </p>
        <div
          class="euiText euiCallOut__additionalContent emotion-euiText-s-euiTextColor-default"
        >
          <div>
            The Discover session associated with this object no longer exists.
          </div>
          <div>
            If you know what this error means, you can use the 
            <a
              aria-label="Saved objects APIs"
              class="euiLink emotion-euiLink-primary"
              href="https://www.elastic.co/docs/api/doc/kibana/group/endpoint-saved-objects"
              rel="noopener noreferrer"
              target="_blank"
            >
              Saved objects APIs
              <span
                class="css-1j75qc1"
                data-euiicon-type="external"
                role="presentation"
              />
              <span
                class="emotion-euiScreenReaderOnly"
              >
                (external, opens in a new tab or window)
              </span>
            </a>
             to fix it — otherwise click the delete button above.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotFoundErrors component renders correctly for unknown type 1`] = `
<div
  class="euiPanel euiPanel--danger euiCallOut euiCallOut--danger emotion-euiPanel-none-danger-euiCallOut-danger"
  data-size="m"
  style="--euiCallOutTypeColor: #C61E25;"
>
  <div
    class="css-1slkmya-wrapper"
  >
    <div
      class="css-wlziyu-body"
    >
      <span
        aria-hidden="true"
        class="css-1cmanx3-icon-l-icon"
        color="#C61E25"
        data-euiicon-type="warning"
      />
      <div
        class="css-ak2bmi-content"
      >
        <p
          class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader"
        >
          There is a problem with this saved object
        </p>
        <div
          class="euiText euiCallOut__additionalContent emotion-euiText-s-euiTextColor-default"
        >
          <div />
          <div>
            If you know what this error means, you can use the 
            <a
              aria-label="Saved objects APIs"
              class="euiLink emotion-euiLink-primary"
              href="https://www.elastic.co/docs/api/doc/kibana/group/endpoint-saved-objects"
              rel="noopener noreferrer"
              target="_blank"
            >
              Saved objects APIs
              <span
                class="css-1j75qc1"
                data-euiicon-type="external"
                role="presentation"
              />
              <span
                class="emotion-euiScreenReaderOnly"
              >
                (external, opens in a new tab or window)
              </span>
            </a>
             to fix it — otherwise click the delete button above.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
